Fix forecast cards gap

--- a/style.css
+++ b/style.css
@@ -236,7 +236,6 @@ img {
 
 .forecast__slider {
     display: flex;
-    gap: 10px;
     overflow-y: hidden;
     padding: 1em;
 }
@@ -263,6 +262,10 @@ img {
     box-shadow: 0px 2px 15px 5px rgba(143, 135, 188, 0.12);
     border-radius: 1em;
     color: #65747C;
+}
+
+.card+.card {
+    margin-left: .8em;
 }
 
 .card__header {
